--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "dev": "node scripts/dev.js && egg-bin dev --port 7003",
-    "start": "node scripts/ln-deps.js && egg-scripts start --port=7003 --daemon --title=egg-sn-trade-web",
+    "start": "egg-scripts start --port=7003 --daemon --title=egg-sn-trade-web",
     "stop": "egg-scripts stop --title=egg-sn-trade-web",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
